# app/Http/Controllers/MaskController.php
@@ -16,26 +16,276 @@ class MaskController extends RestApiController
         $this->update_request = new UpdateMaskRequest;
     }
 
+    /**
+     * Index
+     * @OA\Get (
+     *     path="/api/masks",
+     *     tags={"Masks"},
+     *     security={{"bearer_token": {}}},
+     *     @OA\Parameter(
+     *          name="filter",
+     *          in="query",
+     *          @OA\Schema(
+     *              type="object",
+     *              example={
+     *                 "filter[id]":null,
+     *                 "filter[maska]":null,
+     *                 "filter[tokens]":null,
+     *                 "filter[is_reversed]":null,
+     *                 "filter[created_at]":null,
+     *                 "filter[updated_at]":null,
+     *               }
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="sort",
+     *          in="query",
+     *          example="id",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="page",
+     *          in="query",
+     *          example="1",
+     *          @OA\Schema(
+     *              type="number"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="limit",
+     *          in="query",
+     *          example="20",
+     *          @OA\Schema(
+     *              type="number",
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object",
+     *                  ref="#/components/schemas/MaskSchema"
+     *              ),
+     *          )
+     *      ),
+     * )
+     */
     public function index(Request $request)
     {
         return parent::index($request);
     }
 
+    /**
+     * Store
+     * @OA\Post (
+     *     path="/api/masks",
+     *     tags={"Masks"},
+     *     security={{"bearer_token": {}}},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                  @OA\Property(
+     *                      required={"maska", "tokens"},
+     *                      property="data",
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="maska",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="tokens",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="is_reversed",
+     *                          type="boolean"
+     *                      ),                   
+     *                 ),
+     *                 example={
+     *                     "maska":"S*",
+     *                     "tokens":"S:[0-9]:multiple",
+     *                     "is_reversed":1,
+     *                }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object",
+     *                  ref="#/components/schemas/MaskSchema"
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="The name max length 255 charsets (and 1 more errors)"),
+     *                  @OA\Property(property="errors", type="object",
+     *                      @OA\Property(property="name", type="array", collectionFormat="multi",
+     *                        @OA\Items(
+     *                          type="string",
+     *                          example="The name max length 255 charsets",
+     *                          )
+     *                      ),
+     *                  ),
+     *          )
+     *      )
+     * )
+     */
     public function store(Request $request)
     {
         return parent::store($request);
     }
 
+    /**
+     * Show
+     * @OA\Get (
+     *     path="/api/masks/{id}",
+     *     tags={"Masks"},
+     *      @OA\Parameter( 
+     *          name="id",
+     *          in="path",
+     *          required=true,
+     *          example="1",
+     *          @OA\Schema(
+     *              type="number"
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object",
+     *                  ref="#/components/schemas/MaskSchema"
+     *              ),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="Not found"),
+     *                  ),
+     *          )
+     *      )
+     * )
+     */
     public function show(Request $request, int $id)
     {
         return parent::show($request, $id);
     }
 
+    /**
+     * Update
+     * @OA\Patch (
+     *     path="/api/masks/{id}",
+     *     tags={"Masks"},
+     *     security={{"bearer_token": {}}},
+     *     @OA\Parameter(
+     *          name="id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                  @OA\Property(
+     *                      required={"maska", "tokens"},
+     *                      property="data",
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="maska",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="tokens",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="is_reversed",
+     *                          type="boolean"
+     *                      ),                   
+     *                 ),
+     *                 example={
+     *                     "maska":"S*",
+     *                     "tokens":"S:[0-9]:multiple",
+     *                     "is_reversed":1,
+     *                }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object",
+     *                  ref="#/components/schemas/MaskSchema"
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="The name max length 255 charsets (and 1 more errors)"),
+     *                  @OA\Property(property="errors", type="object",
+     *                      @OA\Property(property="name", type="array", collectionFormat="multi",
+     *                        @OA\Items(
+     *                          type="string",
+     *                          example="The name max length 255 charsets",
+     *                          )
+     *                      ),
+     *                  ),
+     *          )
+     *      )
+     * )
+     */
     public function update(Request $request, int $id)
     {
         return parent::update($request, $id);
     }
 
+    /**
+     * Delete
+     * @OA\Delete (
+     *     path="/api/masks/{id}",
+     *     tags={"Masks"},
+     *     security={{"bearer_token": {}}},
+     *     @OA\Parameter(
+     *          name="id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Deleted"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Access error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="No access"),
+     *                 ),
+     *          )
+     *      )
+     * )
+     */
     public function destroy(int $id)
     {
         return parent::destroy($id);
